# test-driven-development-101

./: .gitignore  CONTRIBUTORS  CONTRIBUTORS.md  Dockerfile  Dockerfile.course  Makefile  README.md  build.sh  contributors.md  docker-compose.yml  mermaid_magic.py  package-lock.json  package.json  site-digitalocean.yml  strip_solutions.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: oas-superlinter.yml
markdown/: 00-github-01-basics.md  00-github-02-actions.md  00-testing-intro.md  01-github-01-basics.md  01-github-02-actions.md  01-ttd-01-basics.md  01-ttd-02-coverage.md  01-ttd-03-container.md  01-ttd-04-static-analysis.md  01-ttd.md  02-api-design.md  03-openapi-intro.md  03-openapi.md  04-my-first-pipeline.md  04-openapi-design.md  05-github-actions.md  05-github-basics.md  05-openapi-implementation.md  06-circleci.md  06-containers.md  06-pipelines.md  Makefile
python/: openapi.skel  openapi.yaml  pyproject.toml  tox.ini
python/ex-01/: Dockerfile  docker-compose.yml  test_minimal.py  test_what.py  tox.ini
python/ex-03/: openapi.skel  openapi.yaml
python/ex-04/: api.py  openapi.skel  openapi.yaml
python/tdd_course/: utils.py
python/tests/: test_foo.py  test_one.py  test_schemathesis.py
