[tool.poetry]
name = "tdd_course"
version = "0.1.0"
description = ""
authors = ["Roberto Polli <robipolli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.3"
coverage = "^5.2.1"
jupyter = "^1.0.0"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.2.0"
autopep8 = "^1.5.3"
pytest-cov = "^2.10.0"
pytest-xdist = "^1.33.0"

[tool.black]
line-length = 79
target-version = ['py37', 'py38']
include = '.*\.py$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

